# mlplatform

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mlplatform/: __init__.py  cli.py  config.py  db.py  models.py  observability.py  promotion.py  queue.py  registry.py  schemas.py  storage.py  tracking.py
src/mlplatform/api/: app.py  routes.py
src/mlplatform/scripts/: __init__.py  simulate_deploy.py  training_sanity_check.py
src/mlplatform/serving/: app.py  service.py
src/mlplatform/training/: pipeline.py  service.py
tests/: conftest.py  test_platform.py  test_registry_and_promotion.py  test_serving_app.py
